// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progress render circle progress correctly 1`] = `
<div
  class="ux-progress ux-progress-circle ux-progress-show-info ux-progress-status-normal ux-progress-default"
>
  <div
    class="ux-progress-inner"
    style="width: 80px; height: 80px; font-size: 18px;"
  >
    <svg
      class="ux-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ux-progress-circle-trail"
        d="M 50 50 m 0,47
          a 47,47 0 1 1 0,-94
          a 47,47 0 1 1 0,94"
        fill="none"
        stroke-width="6"
        style="stroke: #f3f3f3; stroke-dasharray: 246.0914245312005px 295.3097094374406px; stroke-dashoffset: -24.609142453120043px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
      />
      <path
        class="ux-progress-circle-path"
        d="M 50 50 m 0,47
          a 47,47 0 1 1 0,-94
          a 47,47 0 1 1 0,94"
        fill="none"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 73.82742735936014px 295.3097094374406px; stroke-dashoffset: -24.609142453120043px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
    </svg>
    <span
      class="ux-progress-text"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`progress render custom progress correctly 1`] = `
<div class="ux-progress ux-progress-line ux-progress-show-info ux-progress-status-normal ux-progress-default">
  <div>
    <div class="ux-progress-outer">
      <div class="ux-progress-inner">
        <div class="ux-progress-bg" style="width: 40%; height: 8px; border-radius: 50px;"></div>
      </div>
    </div><span class="ux-progress-text"><span>40项</span></span>
  </div>
</div>
`;

exports[`progress render dashboard progress correctly 1`] = `
<div
  class="ux-progress ux-progress-circle ux-progress-show-info ux-progress-status-normal ux-progress-default"
>
  <div
    class="ux-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ux-progress-circle"
      viewBox="0 0 100 100"
    >
      <path
        class="ux-progress-circle-trail"
        d="M 50 50 m 0,47
          a 47,47 0 1 1 0,-94
          a 47,47 0 1 1 0,94"
        fill="none"
        stroke-width="6"
        style="stroke: #f3f3f3; stroke-dasharray: 233.78685330464046px 295.3097094374406px; stroke-dashoffset: -30.761428066400057px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
      />
      <path
        class="ux-progress-circle-path"
        d="M 50 50 m 0,47
          a 47,47 0 1 1 0,-94
          a 47,47 0 1 1 0,94"
        fill="none"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 70.13605599139214px 295.3097094374406px; stroke-dashoffset: -30.761428066400057px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
    </svg>
    <span
      class="ux-progress-text"
    >
      30%
    </span>
  </div>
</div>
`;

exports[`progress render default progress correctly 1`] = `
<div class="ux-progress ux-progress-line ux-progress-show-info ux-progress-status-normal ux-progress-default">
  <div>
    <div class="ux-progress-outer">
      <div class="ux-progress-inner">
        <div class="ux-progress-bg" style="width: 0%; height: 8px; border-radius: 50px;"></div>
      </div>
    </div><span class="ux-progress-text">0%</span>
  </div>
</div>
`;

exports[`progress render default progress correctly 2`] = `
<div class="ux-progress ux-progress-line ux-progress-show-info ux-progress-status-normal ux-progress-default">
  <div>
    <div class="ux-progress-outer">
      <div class="ux-progress-inner">
        <div class="ux-progress-bg" style="width: 40%; height: 10px; border-radius: 0; background: skyblue;"></div>
      </div>
    </div><span class="ux-progress-text">40%</span>
  </div>
</div>
`;
